--- a/frontend/src/app/components/template/footer/footer.component.html
+++ b/frontend/src/app/components/template/footer/footer.component.html
@@ -1,6 +1,10 @@
 <mat-toolbar class="footer">
   <span>
-    desenvolvido por <i class="material-icons v-middle red">code</i>
+    desenvolvido por <i class="material-icons v-middle" colorRed>code</i>
     <strong>Nerak</strong>
   </span>
+  <ul>
+    <!-- <li *myFor="let n em [1, 2, 3] usando 'teste'"></li> -->
+    <li *myFor="let n em [1, 2, 3, 4]">{{ n }}</li>
+  </ul>
 </mat-toolbar>
