--- a/frontend/src/app/components/template/nav/nav.component.scss
+++ b/frontend/src/app/components/template/nav/nav.component.scss
@@ -1,10 +1,15 @@
-.sidenav{
-  background-color: #3F51B6;
+.sidenav {
+  background-color: #3f51b6;
   width: 200px;
-  a{
+  a {
     color: white;
   }
-  i{
+  i {
     padding-right: 10px;
   }
+}
+
+.content {
+  padding: 16px;
+  background-color: white;
 }
