--- a/frontend/src/app/components/product/product-create/product-create.component.html
+++ b/frontend/src/app/components/product/product-create/product-create.component.html
@@ -1,3 +1,15 @@
-<button mat-flat-button (click)="createProdut()" color="primary">Save</button>
+<mat-card>
+  <mat-card-title>New Product</mat-card-title>
+  <form>
+    <mat-form-field>
+      <input matInput placeholder="name" [(ngModel)]="product.name" name="name">
+    </mat-form-field>
+    <mat-form-field>
+      <input matInput placeholder="Price (U$)" [(ngModel)]="product.price" name="price">
+    </mat-form-field>
+  </form>
 
-<button mat-flat-button (click)="cancel()" color="warn">Cancel</button>
+  <button mat-flat-button (click)="createProdut()" color="primary">Save</button>
+
+  <button mat-flat-button (click)="cancel()" color="warn">Cancel</button>
+</mat-card>
