--- a/frontend/src/app/views/product-crud/product-crud.component.html
+++ b/frontend/src/app/views/product-crud/product-crud.component.html
@@ -1,1 +1,4 @@
 <button mat-raised-button (click)="navigateToProductCreate()">New Product</button>
+
+<app-product-read></app-product-read>
+<!-- <app-product-read2></app-product-read2> -->
