criação dos componentes

--- a/frontend/src/app/components/product/product-create/product-create.component.html
+++ b/frontend/src/app/components/product/product-create/product-create.component.html
@@ -9,7 +9,7 @@
     </mat-form-field>
   </form>
 
-  <button mat-flat-button (click)="createProdut()" color="primary">Save</button>
+  <button mat-flat-button (click)="createProduct()" color="primary">Save</button>
 
   <button mat-flat-button (click)="cancel()" color="warn">Cancel</button>
 </mat-card>
