--- a/frontend/src/app/components/product/product-update/product-update.component.html
+++ b/frontend/src/app/components/product/product-update/product-update.component.html
@@ -1,1 +1,15 @@
-<p>product-update works!</p>
+<mat-card>
+  <mat-card-title>Update Product</mat-card-title>
+  <form>
+    <mat-form-field>
+      <input matInput placeholder="name" [(ngModel)]="product.name" name="name">
+    </mat-form-field>
+    <mat-form-field>
+      <input matInput placeholder="Price (U$)" [(ngModel)]="product.price" name="price">
+    </mat-form-field>
+  </form>
+
+  <button mat-flat-button (click)="updateProduct()" color="primary">Save</button>
+
+  <button mat-flat-button (click)="cancel()" color="warn">Cancel</button>
+</mat-card>
